# best_of_n_decision_transformer

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: claims.md  differentiation_from_wam_and_prior_projects.md  final_audit.md  reviewer_attacks.md  theory.md
experiments/: run_all.py  run_cartpole_benchmark.py  run_claim_audit.py  run_expansion_suite.py  run_smoke.py
paper/: abstract.md  build_submission.ps1  checklist.md  experiments.md  intro.md  limitations.md  main.tex  method.md  references.bib  related_work.md  theory.md
paper/final/: best_of_n_decision_transformer-v4-manifest.json
paper/sections/: abstract.tex  appendix.tex  ethics_reproducibility.tex  experiments.tex  introduction.tex  limitations.tex  method.tex  related_work.tex  theory.tex
results/: anti_aligned_control.csv  claims_status.json  claims_status.md  config.json  exact_law_validation.csv  selection_raw.csv  selection_summary.csv  summary.json  support_diagnostics.json  tail_phase_diagram.csv  target_return_sweep.csv
results/cartpole_benchmark/: cartpole_summary.csv  cartpole_trials.csv  claims.json  manifest.json
results/expansion/: claims.json  expanded_summary.csv  expanded_trials.csv  manifest.json
scripts/: run_all.sh  run_claim_audit.sh  run_smoke.sh
src/decision_transformer_best_of_n/: __init__.py  audit.py  best_of_n.py  config.py  data.py  experiments.py  figures.py  model.py  repairs.py
tests/: test_audit.py  test_best_of_n.py  test_cartpole_benchmark.py  test_expansion_suite.py  test_metrics.py  test_model_pipeline.py  test_repairs.py  test_tail_selection.py
(+9 files in other folders)
