[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-transformer-best-of-n"
version = "0.1.0"
description = "Controlled Decision Transformer-style Best-of-N inference diagnostics for return-conditioning fantasy."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jason Wang"}]
dependencies = [
  "numpy",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

